--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mangaone",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "dist-electron/main.js",
   "type": "module",
   "scripts": {
@@ -25,7 +25,12 @@
       "package.json"
     ],
     "mac": {
-      "target": ["dmg", "zip"],
+      "target": [
+        {
+          "target": "dmg",
+          "arch": ["x64", "arm64"]
+        }
+      ],
       "category": "public.app-category.utilities",
       "icon": "public/icon.png"
     },
