--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,57 +3,13 @@ name: Build and Release
 on:
   push:
     tags:
-      - 'v*.*.*'  # v1.0.0 のような形式のタグでトリガー
+      - 'v*' # v0.0.1 など、vから始まるタグでトリガー
+
+permissions:
+  contents: write # リリース作成とファイルのアップロードに必要
 
 jobs:
-  create-release:
-    runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-      version: ${{ steps.get_version.outputs.version }}
-    steps:
-      - name: Get version from tag
-        id: get_version
-        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: MangaOne v${{ steps.get_version.outputs.version }}
-          body: |
-            ## 🎉 MangaOne v${{ steps.get_version.outputs.version }}
-            
-            ### 📦 Downloads
-            
-            Download the appropriate package for your platform below:
-            
-            - **Windows**: `MangaOne-Setup-${{ steps.get_version.outputs.version }}.exe`
-            - **macOS (Intel)**: `MangaOne-${{ steps.get_version.outputs.version }}.dmg`
-            - **macOS (Apple Silicon)**: `MangaOne-${{ steps.get_version.outputs.version }}-arm64.dmg`
-            - **Linux**: `MangaOne-${{ steps.get_version.outputs.version }}.AppImage`
-            
-            ### ✨ What's New
-            
-            See the full changelog below.
-            
-            ### 📝 Installation
-            
-            - **Windows**: Run the `.exe` installer
-            - **macOS**: Open the `.dmg` file and drag MangaOne to Applications
-            - **Linux**: Make the `.AppImage` executable and run it
-            
-            ---
-            
-            **Full Changelog**: https://github.com/${{ github.repository }}/compare/v${{ steps.get_version.outputs.version }}...HEAD
-          draft: false
-          prerelease: false
-
   build:
-    needs: create-release
     strategy:
       matrix:
         include:
@@ -84,47 +40,41 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload Windows artifacts
-        if: matrix.platform == 'win'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload artifacts (Internal)
+        uses: actions/upload-artifact@v4
         with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./release/MangaOne Setup ${{ needs.create-release.outputs.version }}.exe
-          asset_name: MangaOne-Setup-${{ needs.create-release.outputs.version }}.exe
-          asset_content_type: application/octet-stream
+          name: artifacts-${{ matrix.platform }}
+          path: release/MangaOne*
+          retention-days: 1
 
-      - name: Upload macOS DMG
-        if: matrix.platform == 'mac'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./release/MangaOne-${{ needs.create-release.outputs.version }}.dmg
-          asset_name: MangaOne-${{ needs.create-release.outputs.version }}.dmg
-          asset_content_type: application/octet-stream
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Upload macOS ARM64 DMG
-        if: matrix.platform == 'mac'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
         with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./release/MangaOne-${{ needs.create-release.outputs.version }}-arm64.dmg
-          asset_name: MangaOne-${{ needs.create-release.outputs.version }}-arm64.dmg
-          asset_content_type: application/octet-stream
-        continue-on-error: true
+          path: ./dist-artifacts
 
-      - name: Upload Linux AppImage
-        if: matrix.platform == 'linux'
-        uses: actions/upload-release-asset@v1
+      - name: Prepare release files
+        run: |
+          mkdir ./release-files
+          find ./dist-artifacts -type f \( -name "*.exe" -o -name "*.dmg" -o -name "*.AppImage" -o -name "*.zip" \) -exec cp {} ./release-files/ \;
+          ls -R ./release-files
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            ./release-files/*.exe
+            ./release-files/*.dmg
+            ./release-files/*.AppImage
+            ./release-files/*.zip
+          generate_release_notes: true
+          draft: false
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./release/MangaOne-${{ needs.create-release.outputs.version }}.AppImage
-          asset_name: MangaOne-${{ needs.create-release.outputs.version }}.AppImage
-          asset_content_type: application/octet-stream
